# web-test

./: .env.example  .env.working  .gitignore  .mcp.json  .pre-commit-config.yaml  .python-version.bak  .sync-allowed-folders.json  .tflint.hcl  .trufflehog-exclude  .trufflehogignore  .zshrc.optimized  .zshrc.ultra-minimal  AGENTS.md  AGENT_RUNBOOK.md  CI_TEST.md  CLAUDE.md  CLI.FINALIZE.260.sh  CLI.GUARD.230.sh  CLI.POSTBOOT.250.sh  CLI.PR.270.sh  CLI.PREFLIGHT.240.sh  CLI.REPAIR.220.sh  Dockerfile  E1 Plan copy.md  GEMINI.md  LICENSE  Makefile  PROJECT_JOURNAL.md  PROJECT_MVP_COMPLETE_REPORT.md  PR_DESCRIPTION_169m.md  README.md  README_FIXTURES.md  README_M5_CLI_02.md  README_M5_PREFLIGHT.md  README_MERGE_UBLA_PR.md  README_TEST.md  REPORT_FOUNDATION_GREEN.md  REPORT_PHASE_10_SUMMARY.md  REPORT_PHASE_6_SUMMARY.md  REPORT_PHASE_7_SUMMARY.md  (+63 more)
.ci/: .bootstrap_done  M5.1_cli01_report.json  M5.1_cli01_tf_backends.json  M5.1_cli02_report.json  M5.1_cli02_tf_backends.json  M5.1_cli03_monitor_audit.json  M5.1_cli05_pr.json  M5.1_cli05_pr_audit.json  M5.1_cli06a_probe.json  bootstrap_gh.sha256  check_passgate.py  conservative_results.json  format_results.json  m5_monitor_touch.txt  p167a_rules_verification.json  preflight_report_20250903T031108Z.txt  prompt_codex.txt  prompt_cursor.txt  rules_verification.json  rules_verify_report.txt  unstick_pre.json
.claude/: settings.local.json
.codex/: config.toml
.cursor/: .bootstrap_done  CLI_CREATE_SECRET_FIGMA_SG.sh  GLOBAL_RULES.md  README.md  RULES_agent-data-langroid.md  commands.yaml  install_hooks.sh  shell_env_fix.md
.evidence/: 0062C-runtime-constitution-verify.txt  ID-0062B-audit-report.md  phase2_impl.diff  phase5_hand-off.txt  runtime-constitution-audit.txt
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  dependabot.yml  keepalive.ci  pull_request_template.md
.idx/: dev.nix
.tools/: append-summary.sh
Lark/: Lark message Group.txt
agent_data/: __init__.py  cli.py  main.py  memory.py  pf_marker_comments.py  pubsub_listener.py  pubsub_sender.py  resilient_ops.py  security_governance.py  server.py  vector_store.py
api-service/: check_firestore_data.py  create_sample_data.py  main.py  requirements.txt  settings.py  test_client_side_access.py
app-service-project/: .eslintrc.cjs  .firebaserc  README.md  firebase.json  firebase_init_auto.sh  firestore.rules  index.html  package-lock.json  package.json  playwright.config.js  tsconfig.json  vite.config.js
artifacts/: coverage_by_group.json  orphans.csv  rtm.html  rtm.json  speclint.json
automation/: README.md  agent-data-openapi.json  config.js  orchestrator.js  package.json  trigger-gemini.js  trigger-gpt.js
directus/: package-lock.json  package.json  snapshot-full.json  snapshot.json
docs/: AGENCY_OS_E1_BLUEPRINT.md  AI_GATEWAY_ADMIN_CHECKLIST.md  ARCHITECTURE_DECISIONS.md  BUCKETS_MASTER_BLUEPRINT.md  BUSINESS_OS_BLUEPRINT_Ver.OPUS.md  CUSTOM-CODE-REGISTRY.md  DOT-TOOLS-REGISTRY.md  DOT_V01_BLUEPRINT.md  E1_Plan.md  FEEDBACK_SYSTEM.md  GEMINI_TEST_GUIDE.md  GPT_TEST_GUIDE.md  LOCAL_DEVELOPMENT_ENVIRONMENT.md  Larkbase_Sheets_Directus.md  Logic_super_session.md  M5_ORCHESTRATION_GUIDE.md  M5_PREFLIGHT_SECRETS_PERMISSIONS.md  Nháp Opus_bucket_plan.docx  Opus_buckets_reform_plan.md  PHULUC_16_E1_BLUEPRINT.md  PHULUC_17_E1_BLUEPRINT.md  README.md  Web_List_to_do_01.md  agent-a2a-constitution-v5.md  constitution.md  directus-schemas.md  directus_schema_gd1.md  infrastructure.md  manage_qdrant.md  qdrant_upgrade_plan.md  rollback_playbook.md
dot/: .gitignore  README.md
governance/: GCS_BACKEND_PARITY_EVIDENCE_17017028227_20250817T050536Z.md  GCS_BACKEND_PARITY_EVIDENCE_17017974196_20250817T065420Z.md  GCS_BACKEND_PARITY_MAIN_17018045691_20250817T070144Z.md  M5_CLI_02_IMPLEMENTATION_REPORT.md  M5_INPUTS_SIGNED_OFF_20250815T091653Z.md  M5_PLAN_EVIDENCE_16988518713_20250815T105719Z.md  M5_PREFLIGHT_IMPLEMENTATION_REPORT.md  M5_UBLA_EVIDENCE_16988518713_20250816T063347Z.md  M5_UBLA_EVIDENCE_16988518713_20250816T063355Z.md  M5_UBLA_EVIDENCE_17005082019_MANUAL_20250816T062140Z.md  UBLA_PLAN_EVIDENCE_17007387774_20250816T102937Z.md  preflight_M5_20250815T033132Z.md  preflight_M5_20250815T035324Z.md  preflight_M5_20250815T044839Z.md  preflight_M5_20250815T044904Z.md  preflight_M5_20250815T052412Z.md
infra/: cloud-scheduler.yaml
lark-token-generator/: main.py  requirements.txt
lark-token-tester/: CLI_TOOLS_REPORT.md  E2E_TEST_REPORT.md  diagnose_function_issue.py  run_all_tests.py  run_e2e_test.py  test_cleanup.py  test_generate_token.py  test_get_secret.py  test_save_token.py
locales/: ja.json  vi.json
middleware/: auth.ts
monitoring/: dashboard.json
nhap_cursor/: PLAN MERGE TO LAW.audit.json  PLAN MERGE TO LAW.audit.md
pages/: items.vue  login.vue
plugins/: directus.ts  firebase.client.ts
prompts/: rag_system_prompt.md  summarization_prompt.md
reports/: 0028_agency_os_setup.md  0032_nuxt_view_model_mapping.md  0033_codex_merge_to_main.md  0033_nuxt_blueprint_ui_shell.md  0034_nuxt_agentdata_api_integration.md  0035a_approval_ui_implementation.md  0035c_scope_fix.md  0036a_taxonomy_design.md  0036b_taxonomy_senior_review_and_merge.md  0036c_doc_update.md  0037_taxonomy_ui_implementation.md  0037c_doc_update.md  0047_lint_base_cleanup_review_and_merge.md  0047_lint_help_cleanup.md  0047_lint_help_merge_and_status_CODEX.md  0047a_versioning_design.md  0047a_versioning_design_exec_CLAUDE.md  (+151 more)
(+1337 files in other folders)
